product layout bug fixed on heroku

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -990,6 +990,7 @@ body {
   position: relative;
   width: 100%;
   padding: 3px;
+  z-index: 12;
 }
 .header nav {
   display: flex;
@@ -1176,17 +1177,17 @@ body {
 }
 
 .UserInfo {
-  position: absolute;
+  position: fixed;
   right: 2rem;
   background-color: #eee;
   padding: 0px;
   width: 200px;
-  height: 250px;
+  height: auto;
   border-radius: 5px;
   box-shadow: 0px 2px 0px 2px rgba(0, 0, 0, 0.3);
   top: 60px;
-  z-index: 11;
-  transform: scale(0);
+  z-index: 15 !important;
+  transform: scale(0) !important;
   transition: transform 0.5 ease-in;
 }
 .UserInfo li {
@@ -1239,22 +1240,25 @@ body {
   background-color: #e8a540;
 }
 
-.showUserInfo {
-  transform: scale(1);
+.userIcon i {
+  cursor: pointer;
 }
 
-.removeOnClick {
+.removeOnClickAnywhere {
   position: fixed;
   width: 100%;
-  border: 2px solid red;
   height: 100vh;
-  z-index: 9;
+  z-index: 2 !important;
   inset: 0;
   display: none !important;
 }
 
 .showremove {
   display: block !important;
+}
+
+.showUserInfo {
+  transform: scale(1) !important;
 }
 
 .slide_container {
@@ -1826,7 +1830,8 @@ body {
 .mostPopular .add-con > div h2 {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
-  padding: 10px;
+  padding: 0px 10px;
+  padding-top: 5px;
 }
 .mostPopular .add-con > div h2::first-letter {
   text-transform: uppercase;
