--- a/public/sass/layout/_mostPopular.scss
+++ b/public/sass/layout/_mostPopular.scss
@@ -113,7 +113,8 @@
             h2{
                 font-size: 16px;
                 font-family: 'Poppins', sans-serif;
-                padding: 10px;
+                padding: 0px 10px;
+                padding-top: 5px;
 
                 &::first-letter{
                     text-transform: uppercase;
